@@ -1,5 +1,10 @@
 2001-08-05  Bruno Haible  <haible@clisp.cons.org>
 
+	* hashtabl.d (SXHASH): Perform 32-bit -> 24-bit mapping by dividing
+	through 0xFFFFFF. This does not show bad patterns mod 255.
+
+2001-08-05  Bruno Haible  <haible@clisp.cons.org>
+
 	* package.d (export_symbol_from): Fix GC safety bug.
 
 2001-08-13  Sam Steingold  <sds@gnu.org>
